Ignoring target/, what have I become?

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,10 @@
 apply plugin: 'java'
 apply plugin: 'idea'
 
+plugins {
+  id "com.commercehub.gradle.plugin.avro-base" version "0.9.1"
+}
+
 repositories {
   jcenter()
 }
