--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-//  id "com.commercehub.gradle.plugin.avro-base" version "0.9.1"
+  id "com.commercehub.gradle.plugin.avro" version "0.9.1"
 }
 
 apply plugin: 'java'
@@ -7,6 +7,7 @@ apply plugin: 'idea'
 
 repositories {
   jcenter()
+  mavenCentral()
   maven {
     url 'http://packages.confluent.io/maven/'
   }
@@ -15,7 +16,16 @@ repositories {
 dependencies {
   compile 'org.apache.kafka:kafka-streams:0.11.0.0'
   compile 'io.confluent:kafka-streams-avro-serde:3.3.0'
-//  compile 'io.confluent:kafka-avro-serializer:3.3.0'
-//  compile 'io.confluent:kafka-schema-registry-client:3.3.0'
+  compile "org.apache.avro:avro:1.8.1"
 }
 
+sourceSets {
+  avro {
+    java {
+      srcDir 'src/avro-gen/java'
+    }
+  }
+}
+
+println sourceSets.avro.allSource
+//generateAvroJava.templateDirectory = sourceSets.avro.allSource
