--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,12 @@
-plugins {
-//  id "com.commercehub.gradle.plugin.avro-base" version "0.9.1"
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath "com.commercehub.gradle.plugin:gradle-avro-plugin:0.10.0"
+    }
 }
+apply plugin: "com.commercehub.gradle.plugin.avro"
 
 apply plugin: 'java'
 apply plugin: 'idea'
@@ -19,3 +25,6 @@ dependencies {
 //  compile 'io.confluent:kafka-schema-registry-client:3.3.0'
 }
 
+avro {
+    stringType = "CharSequence"
+}
