--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-//  id "com.commercehub.gradle.plugin.avro-base" version "0.9.1"
+  id "com.commercehub.gradle.plugin.avro-base" version "0.9.1"
 }
 
 apply plugin: 'java'
