--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,19 @@ dependencies {
 //  compile 'io.confluent:kafka-schema-registry-client:3.3.0'
 }
 
+
+task streamJsonRatings(type: JavaExec) {
+  main = 'JSONRatingStreamer'
+  classpath = sourceSets.main.runtimeClasspath
+}
+
+task streamAvroRatings(type: JavaExec) {
+  main = 'AvroRatingStreamer'
+  classpath = sourceSets.main.runtimeClasspath
+}
+
+task loadAvroMovies(type: JavaExec) {
+  main = 'AvroMovieLoader'
+  classpath = sourceSets.main.runtimeClasspath
+  args "${projectDir}/data/movies.dat"
+}
