--- a/build.gradle
+++ b/build.gradle
@@ -25,19 +25,23 @@ dependencies {
 //  compile 'io.confluent:kafka-schema-registry-client:3.3.0'
 }
 
+def env = System.getenv()
 
 task streamJsonRatings(type: JavaExec) {
   main = 'JSONRatingStreamer'
   classpath = sourceSets.main.runtimeClasspath
+  args = [env['KAFKA_BOOTSTRAP_SERVERS'] ?: 'localhost:9092']
 }
 
 task streamAvroRatings(type: JavaExec) {
   main = 'AvroRatingStreamer'
   classpath = sourceSets.main.runtimeClasspath
+  args = [env['KAFKA_BOOTSTRAP_SERVERS'] ?: 'localhost:9092']
 }
 
 task loadAvroMovies(type: JavaExec) {
   main = 'AvroMovieLoader'
   classpath = sourceSets.main.runtimeClasspath
   args "${projectDir}/data/movies.dat"
+  args = [env['KAFKA_BOOTSTRAP_SERVERS'] ?: 'localhost:9092']
 }
