--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,13 @@
-import com.commercehub.gradle.plugin.avro.GenerateAvroJavaTask
-
 buildscript {
+  ext {
+    springBootVersion = '2.0.2.RELEASE'
+  }
   repositories {
     jcenter()
   }
   dependencies {
     classpath "com.commercehub.gradle.plugin:gradle-avro-plugin:0.14.2"
+    classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
   }
 }
 
@@ -13,11 +15,14 @@ subprojects {
   apply plugin: 'java'
   apply plugin: 'idea'
 
+  sourceCompatibility = 1.8
+
   repositories {
     jcenter()
     maven {
       url 'http://packages.confluent.io/maven/'
     }
+    maven { url "https://repo.spring.io/milestone" }
   }
 }
 
@@ -81,6 +86,31 @@ project(':streams') {
 //  compile 'io.confluent:kafka-schema-registry-client:3.3.0'
   }
 
+}
+
+project(':spring-streams') {
+  apply plugin: 'org.springframework.boot'
+  apply plugin: 'io.spring.dependency-management'
+
+  dependencies {
+    compile project(':streams')
+
+    compile "org.springframework.boot:spring-boot-starter-web"
+    compile 'org.springframework.kafka:spring-kafka'
+  }
+  ext {
+    springCloudVersion = 'Finchley.RC2'
+  }
+
+  configurations.all {
+    exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+  }
+
+  dependencyManagement {
+    imports {
+      mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
+  }
 }
 
 
