Provision topics with Boot's KafkaAdmin (#1)

--- a/build.gradle
+++ b/build.gradle
@@ -68,8 +68,8 @@ project(':loader') {
   task loadAvroMovies(type: JavaExec) {
     main = 'AvroMovieLoader'
     classpath = sourceSets.main.runtimeClasspath
-    args "${projectDir}/data/movies.dat"
-    args = [env['KAFKA_BOOTSTRAP_SERVERS'] ?: 'localhost:9092']
+    args "${projectDir}/../data/movies.dat"
+    args env['KAFKA_BOOTSTRAP_SERVERS'] ?: 'localhost:9092'
   }
 
 
@@ -112,8 +112,3 @@ project(':spring-streams') {
     }
   }
 }
-
-
-
-
-
