--- a/spring-streams/src/main/resources/application.yml
+++ b/spring-streams/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   kafka:
     consumer:
-      auto-commit-interval: 2
-      enable-auto-commit: true
-      auto-offset-reset: latest
+      enable-auto-commit: false
+      auto-offset-reset: earliest
+logging:
+  level:
+    root: info
