--- a/spring-streams/src/main/resources/application.yml
+++ b/spring-streams/src/main/resources/application.yml
@@ -8,7 +8,8 @@ spring:
     streams:
       application-id: kafka-films
       properties:
-        cache.max.bytes.buffering: 0
+        cache.max.bytes.buffering: 10485760
+        commit.interval.ms: 1000
         default.key.serde: org.apache.kafka.common.serialization.Serdes$LongSerde
         default.value.serde: org.apache.kafka.common.serialization.Serdes$DoubleSerde
         schema.registry.url: http://localhost:8081
